002-multiContainerPod.yml
apiVersion: v1
kind: Pod
metadata:
  name: multi-container-pod
spec:
  containers:
  - name: nginx
    image: nginx
    ports:
    - containerPort: 80
  - name: debian 
    image: debian
    command: ["sleep", "60"]
