008-secret.yml
apiVersion: v1
kind: Pod
metadata:
  name: game-pod
spec:
  containers:
    - name: app
      image: docker.io/nginx:latest
