024-priorityClass.yml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: high-imp
  labels:
    app: high-imp
spec:
  replicas: 40
  selector:
    matchLabels:
      app: high-imp
  template:
    metadata:
      labels:
        app: high-imp
    spec:
      priorityClassName: high
      containers:
      - name: high-imp
        image: docker.io/nginx:perl

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: low-imp
  labels:
    app: low-imp
spec:
  replicas: 40
  selector:
    matchLabels:
      app: low-imp
  template:
    metadata:
      labels:
        app: low-imp
    spec:
      priorityClassName: low
      containers:
      - name: low-imp
        image: docker.io/nginx:perl
